fix: in dark mode, the background color of search results

--- a/src/theme-default/components/Nav/index.module.scss
+++ b/src/theme-default/components/Nav/index.module.scss
@@ -30,7 +30,6 @@
     padding-right: 32px;
     -webkit-backdrop-filter: saturate(50%) blur(8px);
     backdrop-filter: saturate(50%) blur(8px);
-    background: rgba(255, 255, 255, 0.7);
   }
 
   :global(.dark) .has-sidebar .content {
